--- a/src/components/Navigation/NavigationItems/NavigationItems.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItems.module.css
@@ -1,14 +1,14 @@
 .NavigationItems {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    display: flex;
-    flex-flow: column;
-    height: 100%;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  width: 100%;
+  flex-flow: column;
+  height: 100%;
 }
 
 @media (min-width: 500px) {
-    .NavigationItems {
-        flex-flow: row;
-    }
+  .NavigationItems {
+    flex-flow: row;
+  }
 }
