initial commit on branch 24-3-2021

--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -1,14 +1,19 @@
 .Logo {
-    background-color: white;
-    padding: 8px;
-    height: 100%;
-    width: 20%;
-    margin: auto;
-    box-sizing: border-box;
-    border-radius: 5px;
+  background-color: white;
+  padding: 8px;
+  height: 100%;
+  width: 20%;
+  box-sizing: border-box;
+  border-radius: 5px;
 }
 
 .Logo img {
-    height: 100%;
-    object-fit: contain;
+  height: 100%;
+  object-fit: contain;
+}
+
+@media (max-width: 500px) {
+  .Logo {
+    margin: auto;
+  }
 }
