--- a/src/components/Navigation/NavigationItems/NavigationItems.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItems.module.css
@@ -2,7 +2,7 @@
   margin: 0;
   list-style: none;
   display: flex;
-  justify-content: right;
+  justify-content: flex-end;
   width: 100%;
   flex-flow: column;
   height: 100%;
